Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -937,7 +937,7 @@
     "maximum-amount-without-cifnif": "M",
     "maximum-stock": "Höchstbestand",
     "may": "Mai",
-    "mega-search": "MegaBuscador",
+    "mega-search": "MegaSuchmaschine",
     "memcache": "Memcache 0",
     "memcache-clear": "Memcache klärte sich.",
     "memcache-delete-key-item": "Gelöschtes Element '0' von Memcache.",
@@ -969,7 +969,7 @@
     "month": "Monat",
     "month-1": "Januar",
     "month-10": "Oktober",
-    "month-11": "Noeviembre",
+    "month-11": "November",
     "month-12": "Dezember",
     "month-2": "Februar",
     "month-3": "März",
@@ -978,7 +978,7 @@
     "month-6": "Juni",
     "month-7": "Juli",
     "month-8": "Agosto",
-    "month-9": "Septiembre",
+    "month-9": "September",
     "month-name": "Monatsname",
     "month-wildcard-info": "Aktueller Monat (des aktuellen Datums)",
     "monthly": "monatlich",
@@ -1069,7 +1069,7 @@
     "opening-acounting-completed": "Buchhaltungseröffnung abgeschlossen",
     "opening-operation": "Öffnung",
     "operation": "Operation",
-    "operator": "Operador",
+    "operator": "Bediener",
     "option": "Option",
     "optional": "optional",
     "options": "Optionen",
@@ -1121,8 +1121,8 @@
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "% Zuschlag",
-    "pct-tax": "% impuestos",
-    "pct-vat": "VAT rate",
+    "pct-tax": "% Steuern",
+    "pct-vat": "% USt",
     "pending": "Offen",
     "pending-invoices-button": "ausstehende Rechnungen",
     "pending-orders-button": "offene Bestellungen",
@@ -1165,7 +1165,7 @@
     "plugins": "Plugins",
     "plugins-p": "Plugins ermöglichen das Hinzufügen neuer Funktionen. Aktiviere die, die du jetzt benötigst, oder mache es später im Administratormenü.",
     "points": "Punkte",
-    "points-of-interest": "Puntos de interés",
+    "points-of-interest": "Sehenswürdigkeiten",
     "port": "Puerto",
     "position": "Position",
     "positive-balance": "positive-balance",
@@ -1210,7 +1210,7 @@
     "projects": "Proyekte",
     "provider-reference": "Anbieterreferenz",
     "province": "Provinz",
-    "provinces": "provinces",
+    "provinces": "Provinzen",
     "public": "Öffentlichkeit",
     "public-key": "Öffentlicher Schlüssel",
     "purchase-rate": "Kaufrate",
@@ -1225,7 +1225,7 @@
     "quantity": "Menge",
     "quantity-abb": "Menge",
     "quantity-remaining": "Verbleibende Menge",
-    "quantity-served": "quantity-served",
+    "quantity-served": "Anzahl serviert",
     "quantity-sold": "Verkaufte Menge",
     "randomizer-generating-more-items": "Generiere weitere Elemente...",
     "rate": "Rate",
@@ -1284,7 +1284,7 @@
     "renumber-accounting": "Buchungen neu nummerieren",
     "renumber-accounting-error": "Bei der Neunummerierung der Buchungen im Geschäftsjahr %exerciseCode% ist ein Fehler aufgetreten",
     "renumber-accounting-ok": "Neunummerierung der Buchungen abgeschlossen.",
-    "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
+    "renumber-accounting-p": "Buchungen nach Datum von klein nach groß neu nummerieren",
     "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
     "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
     "repeat-new-password": "Passwort wiederholen",
@@ -1375,7 +1375,7 @@
     "setup-options": "Einrichtungsoptionen",
     "shipping": "Versand",
     "shipping-address": "Lieferanschrift",
-    "shop": "Tienda",
+    "shop": "Geschäft",
     "shops": "Geschäfte",
     "short": "Kurz",
     "short-name": "Kurzname:",
@@ -1409,8 +1409,8 @@
     "source": "Quelle",
     "source-code": "Quellcode",
     "special-account": "Sonderkonto",
-    "special-accounting-entries": "special-accounting-entries",
-    "special-accounts": "special-accounts",
+    "special-accounting-entries": "Sonderbuchungen",
+    "special-accounts": "Sonderkonten",
     "specials-actions": "Sonderaktionen",
     "spreadsheet-xls": "Excel-Datei",
     "standard": "Standard",
@@ -1451,14 +1451,14 @@
     "subtotal": "Zwischensumme",
     "subtract": "Subtrahieren",
     "success": "Erfolg",
-    "sum": "Suma",
+    "sum": "Summe",
     "sum-netos-line-tax-must-be": "Die Summe des Nettos der Mehrwertsteuerzeilen sollte 0 sein.",
     "sum-total-line-tax-must-be": "Die Summe der MwSt.-Summen der MwSt.-Zeilen sollte 0 sein.",
     "summary": "Zusammenfassung",
     "sums-and-balances": "Sumas y saldos",
     "sunday": "Sonntag",
     "supplied": "g",
-    "supplied-amount": "supplied-amount",
+    "supplied-amount": "Gelieferte Menge",
     "supplied-subaccount-not-found": "Lieferkonto nicht gefunden",
     "supplier": "Lieferant",
     "supplier-account-not-found": "Unterkonto des Lieferanten nicht gefunden",
@@ -1489,7 +1489,7 @@
     "table": "Tabelle",
     "table-checked": "Tabelle 0 ist markiert.",
     "table-not-found": "table-not-found",
-    "table-size": "table-size",
+    "table-size": "Tabellengröße",
     "tables": "zeichnen",
     "task": "Aufgabe",
     "tasks": "Aufgaben",
@@ -1578,7 +1578,7 @@
     "unit-sale-price": "unit-sale-price",
     "unlimited": "Unbegrenzt",
     "unlink": "Trennen",
-    "unlink-file": "unlink-file",
+    "unlink-file": "Datei trennen",
     "unlink-install-ok": "Installation erfolgreich aus dem Register gelöscht.",
     "unlock-entry": "Eintrag entsperren",
     "unpaid": "Unbezahlt",
