--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -312,7 +312,7 @@
     "conversion-rate-not-0": "Il tasso di conversione non può essere 0.",
     "convert-into-customer": "Convertire in cliente",
     "convert-into-supplier": "Converti in fornitore",
-    "cookies": "Cookies",
+    "cookies": "Cookie",
     "copy": "copia",
     "copy-p": "copia p",
     "copy-subaccounts": "copia sottocconti",
@@ -652,8 +652,8 @@
     "fourth-quarter": "4º trimestre",
     "fourth-trimester": "Quarto trimestre",
     "free": "Gratuito",
-    "friday": "friday",
-    "from": "from",
+    "friday": "Venerdì",
+    "from": "Da",
     "from-accounting-entry": "dall'ingresso in contabilità",
     "from-date": "a partire da",
     "from-subaccount": "Da sotto-conto",
@@ -683,7 +683,7 @@
     "generated-customer-orders": "0 ha generato ordini clienti.",
     "generated-customers": "0 clienti generati.",
     "generated-families": "0 famiglie generate.",
-    "generated-invoice": "generated-invoice",
+    "generated-invoice": "Fattura generata",
     "generated-manufacturers": "0 produttori generati.",
     "generated-products": "%quantity% prodotti generati.",
     "generated-subaccounts": "0 account secondari generati.",
@@ -698,7 +698,7 @@
     "group": "Gruppo",
     "group-accounts": "Agruppa conti",
     "group-by-day": "Raggruppa per giorno",
-    "group-by-day-unixtime": "group-by-day-unixtime",
+    "group-by-day-unixtime": "Raggruppa per giorno (unixtime)",
     "group-by-month": "Raggruppa per mese",
     "group-by-month-unixtime": "Raggruppa per mese (unixtime)",
     "group-by-subaccount": "Raggruppa per sottoconto",
@@ -827,7 +827,7 @@
     "language": "Lingua",
     "languages-ca_ES": "Catalano",
     "languages-cs_CZ": "Ceco",
-    "languages-de_DE": "languages-de_DE",
+    "languages-de_DE": "Tedesco",
     "languages-en_EN": "Inglese",
     "languages-es_AR": "Spagnolo (Argentina)",
     "languages-es_CL": "languages-es_CL",
@@ -847,7 +847,7 @@
     "languages-it_IT": "Italiano",
     "languages-pl_PL": "Polaco",
     "languages-pt_BR": "Portoghese (Brasile)",
-    "languages-pt_PT": "languages-pt_PT",
+    "languages-pt_PT": "Portoghese",
     "languages-va_ES": "Lingua va_ES",
     "last-activity": "L'ultima attività",
     "last-bimester": "ultimo bimestre",
@@ -869,7 +869,7 @@
     "ledger": "Diario",
     "left": "Sinistra",
     "level": "Livello",
-    "level-benefit-sales": "Nivel para ver beneficios",
+    "level-benefit-sales": "Livello per vedere i benefici",
     "level-cost-sales": "Livello per visualizzare i costi",
     "level1": "Livello 1",
     "level2": "Livello 2",
@@ -879,7 +879,7 @@
     "library": "Biblioteca",
     "license": "Licenza",
     "like-than": "Mi piace",
-    "line": "line",
+    "line": "Linea",
     "lines": "Linee",
     "linux": "Linux",
     "list": "Lista",
@@ -908,7 +908,7 @@
     "logs": "registri",
     "long": "Lungo",
     "longitude": "Longitudine",
-    "longitude-abb": "Long",
+    "longitude-abb": "Lng",
     "look-for-gaps": "Cerca spazi vuoti",
     "lot": "lotto",
     "low-security": "Bassa sicurezza",
@@ -1048,7 +1048,7 @@
     "number": "Numero",
     "number-attachments": "Nº di allegati",
     "number-length": "Lunghezza del numero",
-    "number-recipients": "Nº perceptores",
+    "number-recipients": "Nº riceventi",
     "number2": "il numero 2",
     "numeric-formats": "Formati numerici",
     "numsupplier": "Num. fornitore",
@@ -1089,8 +1089,8 @@
     "page-break": "Interruzione di pagina",
     "page-configuration": "Pagina di configurazione",
     "page-not-found": "Pagina non trovata",
-    "page-not-found-p": "No hemos encontrado la página que busca.",
-    "page-option-info": "Desde aquí puedes modificar los campos visibles en este listado o formulario",
+    "page-not-found-p": "Non abbiamo trovato la pagina che stai cercando.",
+    "page-option-info": "Queste sono le opzioni di layout e autorizzazioni di questo modulo o elenco. Puoi modificare l'ordine dei campi, nasconderli, renderli di sola lettura o aumentare il livello di privilegi. Le modifiche verranno applicate all'utente selezionato.",
     "page-total-amount": "importo-totale-pagina",
     "pagename": "Nome della pagina",
     "pages": "pagine",
@@ -1225,7 +1225,7 @@
     "quantity": "Quantità",
     "quantity-abb": "abbreviazione di quantità",
     "quantity-remaining": "Quantità rimanente",
-    "quantity-served": "quantity-served",
+    "quantity-served": "Quantità servita",
     "quantity-sold": "quantità venduta",
     "randomizer-generating-more-items": "Generando più elementi...",
     "rate": "Tariffa",
@@ -1275,7 +1275,7 @@
     "related": "relazionato",
     "related-subaccount-bank-charges": "Subconto correlato per spese bancarie (commissioni, ecc)",
     "related-subaccount-purchases-sales": "Subconto correlato per acquisti e vendite",
-    "reloading": "reloading",
+    "reloading": "Ricaricando...",
     "remove-filter": "rimuovi filtro",
     "remove-from-list": "Rimuovi dalla lista",
     "removing-logs-until": "Rimozione log fino al %date%",
@@ -1331,7 +1331,7 @@
     "search-product": "Cerca prodotto",
     "second-hand": "Di seconda mano",
     "second-quarter": "Secondo trimestre",
-    "second-trimester": "Second trimester",
+    "second-trimester": "Secondo trimestre",
     "select": "Seleziona",
     "select-all": "Seleziona tutto",
     "select-none": "Seleziona nessuno",
@@ -1341,7 +1341,7 @@
     "selector-number": "Selettore",
     "send": "Invia",
     "send-anonymous-data": "Invio di dati anonimi",
-    "send-audios": "Enviar audios",
+    "send-audios": "Invia audio",
     "send-documents": "Inviare documenti",
     "send-images": "Invia immagini",
     "send-invoices": "Invia fatture",
@@ -1366,7 +1366,7 @@
     "serierb": "Serie RB",
     "series": "serie",
     "server": "Server",
-    "service": "service",
+    "service": "Servizio",
     "services": "servizi",
     "settings": "Impostazioni",
     "settlement": "Liquidazione",
@@ -1443,7 +1443,7 @@
     "subaccount-irpf-creditor": "Subconto del creditore IRPF",
     "subaccount-not-found": "Account secondario 0 non trovato.",
     "subaccount-purchases": "Conto per acquisti",
-    "subaccount-pyg-not-found": "subaccount-pyg-not-found",
+    "subaccount-pyg-not-found": "Sottoconto di profitti e perdite non trovato",
     "subaccount-sales": "Conto vendite",
     "subaccounts": "sottoconti",
     "subfamilies": "Sottocategoria",
@@ -1560,7 +1560,7 @@
     "tuesday": "Martedì",
     "type": "tipo",
     "type-alert": "Tipo di avviso",
-    "type-critical": "Type critical",
+    "type-critical": "Tipo critico",
     "type-debug": "Tipo debug",
     "type-emergency": "Type emergency",
     "type-error": "Tipo di errore",
