--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -157,7 +157,7 @@
     "become-sponsor": "Hazte patrocinador",
     "big": "Duży",
     "billing": "Facturación",
-    "billing-address": "Dirección de facturación",
+    "billing-address": "Adres do faktury",
     "birth-date": "Fecha de nacimiento",
     "birthday": "Urodziny",
     "block-date": "Data blokady",
@@ -216,7 +216,7 @@
     "categories": "Categorias",
     "category": "Kategoria",
     "cc": "CC",
-    "center": "Centro",
+    "center": "Centrum",
     "change": "Zmień",
     "channel": "Kanał",
     "charge-date": "Data obciążenia",
@@ -260,7 +260,7 @@
     "color-dark": "Color oscuridad",
     "color-info": "Color info",
     "color-light": "Color luz",
-    "color-primary": "Color primario",
+    "color-primary": "Kolor podstawowy",
     "color-secondary": "Color secundario",
     "color-success": "Color éxito",
     "color-warning": "Color advertencia",
@@ -270,7 +270,7 @@
     "combination-code": "Código de combinación",
     "combinations": "Kombinacje",
     "commercial-terms": "Términos comerciales",
-    "commission": "Comisión",
+    "commission": "Prowizja",
     "commission-general-info": "Informacje ogólne dotyczące prowizji stosowanej przy sprzedaży produktów. Zastosowany zostanie procent z najbardziej restrykcyjnymi lub konkretnymi warunkami informowanymi.",
     "commission-settlement": "Rozliczenie prowizji %code%",
     "commissions": "Comisiones",
@@ -363,7 +363,7 @@
     "customer-orders": "Zamówienia klientów",
     "customer-payment-concept": "Pobranie za rachunek %document%",
     "customer-reached-maximum-risk": "Klient osiągnął maksymalne ryzyko",
-    "customer-subaccount-p": "Indique una subcuenta a usar o deje el campo en blanco para asignar una automáticamente",
+    "customer-subaccount-p": "Wskaź subkonto do użycia, lub pozostaw pole puste, aby przypisać automatycznie",
     "customers": "Klienci",
     "customize": "Personalizar",
     "daily": "Diario",
@@ -395,7 +395,7 @@
     "db-password": "Hasło do bazy danych",
     "db-port": "Puerto base de datos",
     "db-type": "Typ serwera SQL",
-    "db-type-not-recognized": "No se reconoce el tipo de conexión. Debe ser MySQL o PostgreSQL",
+    "db-type-not-recognized": "Typ połączenia nie jest rozpoznawany. Musi być MySQL lub PostgreSQL",
     "db-user": "Usuario base de datos",
     "debit": "Debe",
     "debug-mode": "Modo depuración",
@@ -428,7 +428,7 @@
     "department": "Departamento",
     "departments": "Działy",
     "desc": "Descripción",
-    "desc-alfa-code-2": "Identificación oficial para los nombres de países y otras dependencias administrativas",
+    "desc-alfa-code-2": "Oficjalna identyfikacja dla nazw krajów i innych jednostek administracyjnych",
     "desc-alfa-code-3": "Identificación oficial para los nombres de países y otras dependencias administrativas",
     "desc-business-name": "Nombre oficial del cliente, para las facturas y otros documentos.",
     "desc-business-name-2": "Nazwa fiskalna lub prawnie zarejestrowana klienta",
@@ -683,7 +683,7 @@
     "generated-customer-orders": "%quantity% pedidos de cliente generados.",
     "generated-customers": "%quantity% wygenerowanych klientów.",
     "generated-families": "%quantity% wygenerowanych rodzin.",
-    "generated-invoice": "Factura generada",
+    "generated-invoice": "Wygenerowana faktura",
     "generated-manufacturers": "Wygenerowano %quantity% producentów.",
     "generated-products": "%quantity% wygenerowanych produktów.",
     "generated-subaccounts": "Wygenerowano %quantity% subkont księgowych.",
@@ -691,7 +691,7 @@
     "generated-supplier-delivery-notes": "%quantity% albaranes de compra generados.",
     "generated-supplier-estimations": "%quantity% presupuestos de proveedor generados.",
     "generated-supplier-orders": "%quantity% pedidos de proveedor generados.",
-    "global-dto": "Dto. global",
+    "global-dto": "Globalne Dto",
     "global-dto-2": "Dto. global 2",
     "greater-than": "Większy niż",
     "grid-help": "Control + intro para salto de línea. Puedes mover o eliminar las líneas haciendo clic en el número de línea.",
@@ -897,13 +897,13 @@
     "login-cookie-fail": "Nieprawidłowy ciasteczko logowania",
     "login-image": "Imagen de login",
     "login-ok": "Sesión iniciada satisfactoriamente (cookie). Usuario: '%nick%'",
-    "login-password-fail": "El usuario o la contraseña son incorrectos",
+    "login-password-fail": "Użytkownik lub hasło są niepoprawne",
     "login-text": "Escriba su nombre de usuario y contraseña para iniciar sesión",
     "login-to-continue": "Inicie sesión para continuar",
     "login-to-continue-p": "Necesita identificarse para continuar con esta acción. Haga clic en iniciar sesión o cree una cuenta.",
     "login-user-not-found": "Usuario no encontrado: %nick%",
     "logo": "Logotipo",
-    "logout": "Cerrar sesión",
+    "logout": "Wyloguj się",
     "logout-ok": "Sesión cerrada correctamente.",
     "logs": "Dzienniki",
     "long": "Largo",
@@ -919,7 +919,7 @@
     "mail-test-error": "La prueba de email ha fallado",
     "mail-test-ok": "Prueba de email ejecutada correctamente",
     "mailer": "Sterownik poczty",
-    "main-address": "Dirección principal",
+    "main-address": "Główne adres",
     "manage": "Administrar",
     "manage-installation": "Administrar",
     "manual": "Instrukcja obsługi",
@@ -941,7 +941,7 @@
     "memcache": "Memcache",
     "memcache-clear": "Memcache wyczyszczone.",
     "memcache-delete-key-item": "Eliminado elemento '%item%' de Memcache.",
-    "memcache-get-key-item": "Obtenido elemento '%item%' desde Memcache.",
+    "memcache-get-key-item": "Pobrano element '%item%' z Memcache.",
     "memcache-host": "Servidor Memcache",
     "memcache-port": "Puerto Memcache",
     "memcache-prefix": "Prefijo Memcache",
@@ -1060,7 +1060,7 @@
     "only-closed": "Solamente cerrados",
     "only-insert": "Sólo añadir",
     "only-owner-data": "Wyświetl tylko rekordy właściciela",
-    "only-pending": "Sólo Pendientes",
+    "only-pending": "Tylko oczekujące",
     "only-suspended": "Solamente suspendidos",
     "open": "Otwórz",
     "open-exercise": "Abrir ejercicio",
@@ -1126,7 +1126,7 @@
     "pending": "Pendiente",
     "pending-invoices-button": "Fakt. Ptes:",
     "pending-orders-button": "Ped. Ptes:",
-    "pending-reception": "Pendiente recepción",
+    "pending-reception": "Oczekujący odbiór",
     "percentage": "Porcentaje",
     "percentage-commission": "% Comisión",
     "percentage-discount": "% Rabatu",
@@ -1302,7 +1302,7 @@
     "reset": "Resetuj",
     "resource": "Recurso",
     "respond": "Responder",
-    "restore": "Restaurar",
+    "restore": "Przywróć",
     "restore-data": "Przywróć dane",
     "result": "Resultado",
     "retention": "Zatrzymanie",
@@ -1437,7 +1437,7 @@
     "sub-account": "Subcuenta",
     "sub-type": "Podtyp",
     "subaccount": "Subcuenta",
-    "subaccount-bad-codcuenta": "La subcuenta %codsubcuenta% tiene asignada una cuenta incorrecta.",
+    "subaccount-bad-codcuenta": "Subkonto %codsubcuenta% ma przypisaną niepoprawną konto.",
     "subaccount-belongs-other-year": "Konto podrzędne %subAccountCode% należy do innego roku.",
     "subaccount-irpf": "Konto dla potrąceń",
     "subaccount-irpf-creditor": "Rachunek IRPF dla zakupów",
@@ -1458,7 +1458,7 @@
     "sums-and-balances": "Sumy i salda",
     "sunday": "Niedziela",
     "supplied": "Suplido",
-    "supplied-amount": "Suplidos",
+    "supplied-amount": "Dostawy",
     "supplied-subaccount-not-found": "Podrachunek zaopatrzony nie znaleziony",
     "supplier": "Proveedor",
     "supplier-account-not-found": "Nie znaleziono subkonta dostawcy",
@@ -1494,7 +1494,7 @@
     "task": "Zadanie",
     "tasks": "Zadania",
     "tasks-completed-title": "Tareas completadas",
-    "tasks-component-title": "Tareas",
+    "tasks-component-title": "Zadania",
     "tasks-personal-title": "Zadania osobiste",
     "tax": "Impuesto",
     "tax-area": "Zona de impuestos",
@@ -1520,7 +1520,7 @@
     "this-last-fortnight": "Los últimos 15 días",
     "this-last-month": "Ostatnie 30 dni",
     "this-last-week": "Ostatnie 7 dni",
-    "this-last-year": "Los últimos 365 días",
+    "this-last-year": "Ostatnie 365 dni",
     "this-month": "Este mes",
     "this-week": "Esta semana",
     "this-year": "Ten rok",
@@ -1554,7 +1554,7 @@
     "transfers": "Przesunięcia",
     "transfers-stock": "Transfery zapasów",
     "translation": "Traducción",
-    "translations": "Traducciones",
+    "translations": "Tłumaczenia",
     "travel": "Viaje",
     "try-again-later": "Pruebe de nuevo más tarde",
     "tuesday": "Wtorek",
@@ -1594,7 +1594,7 @@
     "updates-available": "Actualizaciones disponibles",
     "updates-available-p": "Dostępne są aktualizacje FacturaScripts. Proszę kliknąć w aktualizator i pobrać nową wersję. Aktualizacje naprawiają błędy i dodają nowe funkcje.",
     "updating-attached-relations": "Aktualizowanie powiązań załączonych plików",
-    "upload-file": "Subir archivo",
+    "upload-file": "Prześlij plik",
     "uploaded-at": "Cargado en",
     "url": "Dirección web",
     "use-gaps": "Usar huecos",
@@ -1617,7 +1617,7 @@
     "variant": "Wariant",
     "variants": "Variantes",
     "vat": "VAT",
-    "vat-document": "Documento",
+    "vat-document": "Dokument",
     "vat-exception": "Excepción de IVA",
     "vat-number-is-short": "Numer '%vat-number%' jest zbyt krótki",
     "vat-number-not-vies": "Numer '%vat-number%' nie jest zarejestrowany w systemie VIES",
