--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -71,7 +71,7 @@
     "alert": "Alerta",
     "alerts": "Alertas",
     "alfa-code-2": "Código Alfa 2",
-    "alfa-code-3": "Código Alfa 3",
+    "alfa-code-3": "Código alfa 3",
     "alias": "Alias",
     "alias-general-info": "Permite que você dê um nome ao valor da coluna à sua esquerda",
     "alias-wildcard-info": "Valor do alias definido anteriormente. Exemplo: %import%, %vat%",
@@ -284,7 +284,7 @@
     "company-warehouse": "Empresa\/Armazém",
     "comparative": "Comparativo",
     "compared": "Comparado",
-    "compatible": "Compatible",
+    "compatible": "Compatível",
     "completed": "Completado",
     "component": "Componente",
     "concept": "Conceito",
@@ -316,7 +316,7 @@
     "copy": "Copiar",
     "copy-p": "Preencha o formulário antes de fazer a cópia deste modelo",
     "copy-subaccounts": "Copiar subcontas",
-    "core-update": "core-update",
+    "core-update": "Atualização do núcleo para a versão %version%",
     "core-update-warning": "Avisos de atualização",
     "correct": "Correto",
     "cost": "Custo",
@@ -579,7 +579,7 @@
     "exclude-valid": "Excluir válidos",
     "exempt": "Isentar",
     "exercise": "Exercício",
-    "exercise-date-out-range": "Date not in exercise range.",
+    "exercise-date-out-range": "A data não está no intervalo do exercício.",
     "exercise-date-range-exists": "Exercício já existe nesse intervalo de datas (%start% - %end%)",
     "exercise-not-found": "Exercício não encontrado.",
     "exercise-without-accounting-plan": "O",
@@ -617,7 +617,7 @@
     "filecache-delete-key-item": "Elemento '%item%' excluído do Filecache.",
     "filecache-get-key-item": "Obtido elemento '0' do Filecache.",
     "filecache-set-key-item": "Elemento atribuído '%item%' ao Filecache.",
-    "files": "arquivos",
+    "files": "Arquivos",
     "filter-method": "Método de filtragem",
     "filter-records-containing-indicated-value": "Filtrar registros que contêm o valor indicado",
     "filters": "Filtros",
@@ -674,11 +674,11 @@
     "generate-title": "Criar Relatório",
     "generated-accounting-entries": "%quantity% lançamentos contábeis gerados.",
     "generated-accounts": "%quantity% contas contábeis geradas.",
-    "generated-agents": "0 agentes gerados.",
+    "generated-agents": "%quantity% agentes gerados.",
     "generated-at": "Gerado em %when%",
     "generated-contacts": "%quantity% contatos gerados.",
     "generated-customer-delivery-notes": "0 notas de entrega de clientes geradas.",
-    "generated-customer-estimations": "0 estimativas de clientes geradas.",
+    "generated-customer-estimations": "%quantity% orçamentos de cliente gerados.",
     "generated-customer-groups": "0 grupos de clientes gerados.",
     "generated-customer-orders": "0 ordens de clientes geradas.",
     "generated-customers": "0 clientes gerados.",
@@ -723,7 +723,7 @@
     "hello": "Olá",
     "help": "Ajuda",
     "help-button-p": "Consulte a ajuda em cada tela",
-    "help-server-accepts-filesize": "This server support files up to %size% MB.",
+    "help-server-accepts-filesize": "Este servidor suporta arquivos de até %size% MB.",
     "hide": "ocultar",
     "high": "Alto",
     "high-purchase-price": "Preço de compra mais alto",
@@ -776,7 +776,7 @@
     "invalid-column-lenght": "%column% deve ter entre %min% e %max% caracteres.",
     "invalid-date": "Data inválida 0.",
     "invalid-date-there-are-invoices-after": "Data inválida: %date%. A fatura %other% é posterior e mesmo assim tem data anterior: %other-date%. Toda fatura deve ter data anterior ou igual à seguinte.",
-    "invalid-date-there-are-invoices-before": "invalid-date-there-are-invoices-before",
+    "invalid-date-there-are-invoices-before": "Data inválida: %date%. A fatura %other% é anterior a esta e no entanto tem data posterior: %other-date%. Toda a fatura deve ter uma data anterior ou igual à seguinte.",
     "invalid-iban": "i",
     "invalid-iso-code": "Código ISO ''%iso-code% inválido",
     "invalid-number": "Número não válido: %number%",
@@ -890,7 +890,7 @@
     "lock-entry": "Bloquear lançamento",
     "lock-invoice": "Bloquear fatura",
     "lock-unlock": "Bloquear-Desbloquear",
-    "lock-unlock-account-entry": "Block\/Unlock the accounting entry",
+    "lock-unlock-account-entry": "Bloquear\/Desbloquear a entrada contábil",
     "locked": "Bloqueado",
     "log": "Log",
     "login": "Entrar",
@@ -958,7 +958,7 @@
     "minutes": "Minutos",
     "mismatched-accounting-entry": "Lançamento contábil incorreto",
     "missing-data-epigraph-group": "Faltando dados no grupo de epígrafes.",
-    "missing-data-subaccount": "Falta dados na subconta.",
+    "missing-data-subaccount": "Faltam dados na subconta.",
     "missing-epigraph-data": "Dados em epígrafe faltando.",
     "missing-file": "Falta o arquivo",
     "missing-file-help": "Parece que este arquivo não está presente na sua instalação. Talvez você não o utilize, mas <em>não pode removê-lo<\/em>.",
@@ -1053,7 +1053,7 @@
     "numeric-formats": "Formatos numéricos",
     "numsupplier": "Núm. fornecedor",
     "observations": "Observações",
-    "october": "Octubre",
+    "october": "Outubro",
     "offsetting-account": "Conta de contrapartida",
     "only-active": "Somente ativos",
     "only-charged": "Apenas cobrados",
@@ -1089,7 +1089,7 @@
     "page-break": "Quebra de página",
     "page-configuration": "Página de Configuraç",
     "page-not-found": "Página não encontrada",
-    "page-not-found-p": "No hemos encontrado la página que busca.",
+    "page-not-found-p": "Não encontramos a página que você procura.",
     "page-option-info": "Aqui você pode modificar os campos visíveis neste listagem ou formulário",
     "page-total-amount": "Total da página",
     "pagename": "Nome da página",
@@ -1150,7 +1150,7 @@
     "plugin-disabled": "O Plugin %pluginName% foi desativado com sucesso.",
     "plugin-enabled": "O Plugin %pluginName% foi ativado com sucesso.",
     "plugin-file-too-big": "Este servidor não permite fazer upload de arquivos com mais de %size% MB. Por favor, aumente o tamanho máximo de upload de arquivos no PHP ou copie o arquivo para a pasta Plugins.",
-    "plugin-installation-disabled": "plugin-installation-disabled",
+    "plugin-installation-disabled": "A instalação de plug-ins está desativada neste servidor",
     "plugin-installed": "Plugin '%pluginName%' instalado",
     "plugin-need-update": "O plugin %plugin% precisa ser atualizado para funcionar com a nova versão do FacturaScripts.",
     "plugin-need-update-but": "O plugin %plugin% ainda não tem uma atualização compatível.",
@@ -1164,7 +1164,7 @@
     "plugin-update": "a",
     "plugins": "Plugins",
     "plugins-p": "Os plugins permitem adicionar novas funções. Ative os que precisar agora, ou quando quiser, a partir do menu administrador.",
-    "points": "points",
+    "points": "Pontos",
     "points-of-interest": "Pontos de interesse",
     "port": "Porta",
     "position": "Cargo",
@@ -1250,7 +1250,7 @@
     "recreate-system-integrity": "Recriar integridade do sistema",
     "rectified-invoice": "fatura retificada",
     "rectified-invoice-p": "Las facturas son documentos mercantiles y tiene una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utiliza este formulario para hacer una devolución sobre esta factura.",
-    "rectified-invoices": "Facturas rectificativas",
+    "rectified-invoices": "Faturas retificativas",
     "rectifying": "Retificativa",
     "rectifying-serie": "Série retificativa",
     "redirect": "Redirecionamento",
@@ -1268,7 +1268,7 @@
     "register-installation-p": "Registe a sua instalação para poder atualizar plugins pagos ou privados.",
     "register-symbol": "#",
     "registered-installation": "r",
-    "registered-installation-p": "registered-installation-p",
+    "registered-installation-p": "Esta instalação já foi registrada. Se você tiver plugins pagos, clique no botão gerenciar para vinculá-los e poder atualizar.",
     "regularization-operation": "Operação de regularização",
     "reject": "Rejeitar",
     "rejected": "rejeitado",
@@ -1323,7 +1323,7 @@
     "same-group": "Mesmo grupo",
     "saturday": "sábado",
     "save": "Salvar",
-    "save-data": "Guardar dados",
+    "save-data": "Salvar dados",
     "save-filter": "Salvar Filtros",
     "sdk": "SDK",
     "search": "Pesquisar",
@@ -1478,7 +1478,7 @@
     "supplier-products": "Produtos do fornecedor",
     "supplier-reference": "Referência do fornecedor",
     "suppliers": "Fornecedores",
-    "support": "Soporte",
+    "support": "Suporte",
     "supported-tax-re-subaccount": "Subconta de imposto de suporte",
     "supported-tax-subaccount": "Subconta de imposto suportada",
     "surcharge": "Sobretaxa",
@@ -1590,7 +1590,7 @@
     "update-supplier-prices": "Atualizar preços dos fornecedores",
     "update-time": "Hora de atualização",
     "updated-model": "Atualizado %model% (%key%) %desc%",
-    "updater": "Updater",
+    "updater": "Atualizador",
     "updates-available": "Actualizaciones disponibles",
     "updates-available-p": "Há atualizações disponíveis do FacturaScripts. Por favor, clique no atualizador e baixe a nova versão. As atualizações corrigem falhas e adicionam novas funcionalidades.",
     "updating-attached-relations": "Atualizando contadores de relações anexadas",
@@ -1673,7 +1673,7 @@
     "yesterday": "Ontem",
     "you-cant-delete-primary-variant": "Você não pode excluir a variante principal do produto",
     "you-sent-a-audio": "Enviaste um áudio",
-    "you-sent-a-document": "Enviaste un documento",
+    "you-sent-a-document": "Você enviou um documento",
     "you-sent-a-location": "Você enviou uma localização",
     "you-sent-a-picture": "Você enviou uma imagem",
     "you-sent-a-video": "Você enviou um vídeo",
