--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -199,7 +199,7 @@
     "cant-delete-default-currency": "cant-delete-default-currency",
     "cant-delete-default-payment-method": "cant-delete-default-payment-method",
     "cant-delete-default-serie": "Não é possível eliminar a série padrão",
-    "cant-delete-default-tax": "cant-delete-default-tax",
+    "cant-delete-default-tax": "Não é possível eliminar o imposto padrão",
     "cant-delete-default-warehouse": "cant-delete-default-warehouse",
     "cant-delete-last-user": "No se puede eliminar el último usuario",
     "cant-delete-variant-with-documents": "Não é possível excluir o produto ou variante %reference% porque já foi comprado ou vendido. No entanto, você pode bloqueá-lo se desejar.",
@@ -311,7 +311,7 @@
     "conversion-rate": "Taxa de conversão para €",
     "conversion-rate-not-0": "A taxa de conversão não pode ser 0.",
     "convert-into-customer": "Converte a cliente",
-    "convert-into-supplier": "convert-to-supplier",
+    "convert-into-supplier": "Converter em fornecedor",
     "cookies": "Cookies",
     "copy": "Copiar",
     "copy-p": "Preencha o formulário antes de fazer a cópia deste modelo",
@@ -718,7 +718,7 @@
     "header": "Cabeçalho",
     "heading-account-group-id": "Cabeçalho do grupo de identificação da conta",
     "heading-account-id-root": "Cabeçalho da raiz da conta",
-    "health": "health",
+    "health": "Saúde",
     "height": "Altura",
     "hello": "Hola",
     "help": "Socorro",
@@ -727,7 +727,7 @@
     "hide": "Ocultar",
     "high": "Alto",
     "high-purchase-price": "Preço de compra mais alto",
-    "hint-create-accounting-entry": "Create the accounting entry for the regularization of the taxes of the period",
+    "hint-create-accounting-entry": "Criar o lançamento contábil para a regularização dos impostos do período",
     "hint-vat-register": "View\/Modify VAT registration",
     "history": "Historial",
     "homepage": "Página inicial",
@@ -776,7 +776,7 @@
     "invalid-column-lenght": "%column% deve ter entre %min% e %max% caracteres.",
     "invalid-date": "Data inválida 0.",
     "invalid-date-there-are-invoices-after": "Data inválida: %date%. A fatura %other% é posterior e mesmo assim tem data anterior: %other-date%. Toda fatura deve ter data anterior ou igual à seguinte.",
-    "invalid-date-there-are-invoices-before": "invalid-date-there-are-invoices-before",
+    "invalid-date-there-are-invoices-before": "Data inválida: %date%. A fatura %other% é anterior a esta e no entanto tem data posterior: %other-date%. Toda a fatura deve ter uma data anterior ou igual à seguinte.",
     "invalid-iban": "i",
     "invalid-iso-code": "Código ISO ''%iso-code% no válido",
     "invalid-number": "Número não válido: %number%",
@@ -895,7 +895,7 @@
     "log": "Log",
     "login": "Entrar",
     "login-cookie-fail": "O cookie da sessão falhou",
-    "login-image": "Imagen de login",
+    "login-image": "Imagem de login",
     "login-ok": "Faça o login com sucesso (cookie). Usuário: '0'",
     "login-password-fail": "Falha na autenticação",
     "login-text": "Entrar",
@@ -1030,7 +1030,7 @@
     "normal": "Normal",
     "not-allowed-delete": "Não tem permiso para eliminar",
     "not-allowed-modify": "n",
-    "not-enough-stock": "not-enough-stock",
+    "not-enough-stock": "Não há stock suficiente de %reference%",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obter mais detalhes aqui<\/a>.",
     "not-public": "Não público",
     "not-stored-content": "Conteúdo não armazenado",
@@ -1053,7 +1053,7 @@
     "numeric-formats": "Formatos numéricos",
     "numsupplier": "Num. fornecedor",
     "observations": "Observações",
-    "october": "Octubre",
+    "october": "Outubro",
     "offsetting-account": "Conta de contrapartida",
     "only-active": "Apenas ativos",
     "only-charged": "only-charged",
@@ -1068,7 +1068,7 @@
     "opened": "Aberto",
     "opening-acounting-completed": "opening-acounting-completed",
     "opening-operation": "Apertura",
-    "operation": "Operación",
+    "operation": "Operação",
     "operator": "Operador",
     "option": "Opção",
     "optional": "Opcional",
@@ -1250,7 +1250,7 @@
     "recreate-system-integrity": "Recriar integridade do sistema",
     "rectified-invoice": "rectified-invoice",
     "rectified-invoice-p": "Las facturas son documentos mercantiles y tiene una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utiliza este formulario para hacer una devolución sobre esta factura.",
-    "rectified-invoices": "Facturas rectificativas",
+    "rectified-invoices": "Faturas retificativas",
     "rectifying": "Retificativa",
     "rectifying-serie": "Série retificativa",
     "redirect": "Redirecionamento",
@@ -1311,7 +1311,7 @@
     "right": "Direita",
     "risky-customer": "Cliente de Risco",
     "rol": "Grupo",
-    "role": "Role",
+    "role": "Grupo",
     "roles": "Roles",
     "rules": "Regras",
     "run": "executar",
@@ -1341,11 +1341,11 @@
     "selector-number": "Seletor",
     "send": "Enviar",
     "send-anonymous-data": "Enviar datos anónimos",
-    "send-audios": "Enviar audios",
+    "send-audios": "Enviar áudios",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imágenes",
     "send-invoices": "Enviar faturas",
-    "send-location": "Enviar ubicación",
+    "send-location": "Enviar localização",
     "send-mail": "Enviar email",
     "send-mail-error": "Erro ao enviar email",
     "send-mail-ok": "Email enviado corretamente",
@@ -1392,7 +1392,7 @@
     "simple": "Simples",
     "simplified": "Simplificada",
     "size": "size",
-    "sketch": "Boceto",
+    "sketch": "Esboço",
     "sketch-invoice-warning": "Esta factura todavía es un boceto. Hágala oficial cambiado su estado a emitida.",
     "small": "Pequeno",
     "smaller-than": "Menor que",
@@ -1471,7 +1471,7 @@
     "supplier-invoice": "Fatura de Fornecedor",
     "supplier-invoice-deleted-successfully": "Comprar fatura 0 excluída com sucesso.",
     "supplier-invoices": "Faturas de Fornecedor",
-    "supplier-not-found": "supplier-not-found",
+    "supplier-not-found": "Fornecedor não encontrado",
     "supplier-order": "Pedido de fornecedor",
     "supplier-orders": "Pedidos de fornecedores",
     "supplier-payment-concept": "b",
@@ -1543,7 +1543,7 @@
     "total-purchases": "Total das Compras",
     "total-sales": "Total das Vendas",
     "total-value-error": "Quantidade total de 0 1 incorreta (2). Valor correto: 3",
-    "total-with-taxes": "Total with taxes",
+    "total-with-taxes": "Total + impostos",
     "totalirpf-value-error": "Quantidade total de IRPF de 0 1 incorreta (2). Valor correto: 3",
     "totaliva-value-error": "Valor de imposto total de 0 1 incorreto (2). Valor correto: 3",
     "totallinea-value-error": "Erro no valor totallinea da linha IVA do imposto 0 da factura. Valor correto: 1",
