--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -487,7 +487,7 @@
     "dont-sell-below-cost": "No vender por debajo de coste",
     "download": "Descargar",
     "download-completed": "Descargar completada",
-    "download-error": "Chyba při stahování. Kód %status% - %error%",
+    "download-error": "Chyba při stahování. Kód %status% - %error% %body%",
     "download-xml": "Stáhnout XML",
     "downloads": "Descargas",
     "drag": "Arrastrar",
